kubernetes/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
  labels:
    app: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
      - name: portfolio-frontend
        image: apurvagargote/portfolio-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-service
spec:
  selector:
    app: portfolio-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
